objects/PT_SOQLs_for_JSON__mdt.object
<CustomObject>
    <fields>
        <fullName>Opportunity_Shipsets__c</fullName>
        <label>Opportunity Shipsets</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Program_Data__c</fullName>
        <label>Program Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Program_Quotes__c</fullName>
        <label>Program Quotes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Program_Shipsets__c</fullName>
        <label>Program Shipsets</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>SOQL for JSON</label>
    <pluralLabel>SOQLs for JSON</pluralLabel>
</CustomObject>